<resources>
    <string name="app_name">LoginTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="regiter">Regiter</string>
    <string name="go_to_login">Already have an account? Login</string>
    <string name="got_to_register">Create a new account? Register</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
</resources>